# GearsLibrary

./: .editorconfig  .editorconfig.cmake  .gitignore  .gitmodules  3DObjectFormat.txt  Build.bat  CMakeLists.txt  GL_3DObjectFormat.txt  GL_AnimationFormat.txt  LICENSE.txt  Quad.globj  README.md  main.cpp
Gears3DObject/: CMakeLists.txt
Gears3DObject/include/: ByteUtility.h  GLAnimation.h  GLObject.h  GLObjectConstant.h
Gears3DObject/include/Utility/: ByteUtility.h  IOUtility.h  StringUtility.h
Gears3DObject/src/: GLAnimation.cpp  GLObject.cpp
GearsAudio/: CMakeLists.txt
GearsAudio/include/: AudioClip.h  AudioManager.h
GearsAudio/include/Components/: AudioListener.h  AudioSource.h
GearsAudio/include/Internal/: AudioChannels.h  AudioLoaderFactory.h  IAudioLoader.h  WavLoader.h  XAudioSystem.h
GearsAudio/src/: AudioClip.cpp  AudioManager.cpp
GearsAudio/src/Components/: AudioListener.cpp  AudioSource.cpp
GearsAudio/src/Internal/: AudioLoaderFactory.cpp  WavLoader.cpp  XAudioSystem.cpp
GearsComponent/: CMakeLists.txt
GearsComponent/include/: Component.h  Transform.h
GearsComponent/include/Components/: Transform.h
GearsComponent/include/Internal/: ComponentEventFunctionList.h  ComponentFunctionInfo.h  ComponentFunctionList.h  ComponentFunctionType.h  ComponentManager.h  IComponent.h
GearsComponent/src/: Component.cpp  Transform.cpp
GearsComponent/src/Components/: Transform.cpp
GearsComponent/src/Internal/: ComponentEventFunctionList.cpp  ComponentFunctionList.cpp  ComponentManager.cpp
GearsCore/: CMakeLists.txt
GearsCore/include/: FuncDefinition.h  FuncOrderDefinition.h  Game.h  GameTimer.h  Glib.h  SystemManager.h  Window.h
GearsCore/include/Internal/: FuncOrder.h  FuncOrderConstant.h  HasFunction.h  HasFunctionObject.h  IFunc.h  IOrderFunc.h  ISystem.h  MemoryCheck.h  SystemFunctionType.h
GearsCore/src/: Game.cpp  GameTimer.cpp  SystemManager.cpp  Transform.cpp  Window.cpp
GearsCore/src/Internal/: MemoryCheck.cpp
GearsDebug/: CMakeLists.txt
GearsDebug/include/: Debugger.h  GGui.h  GLGUI.h
GearsDebug/include/Internal/: ImGuiFont.h  ImGuiInc.h  ImGuiManager.h
GearsDebug/src/: Debugger.cpp  GGui.cpp  GLGUI.cpp
GearsDebug/src/Internal/: ImGuiManager.cpp
GearsEffect/: CMakeLists.txt
GearsEffect/include/: EffectManager.h
GearsEffect/include/Components/: EffectSystem.h
GearsEffect/include/Internal/: EffekseerManager.h  EffekserManager.h
GearsEffect/src/: EffectManager.cpp
GearsEffect/src/Components/: EffectSystem.cpp
GearsEffect/src/Internal/: EffekseerManager.cpp  EffekserManager.cpp
GearsGraphics/: CMakeLists.txt
GearsGraphics/include/: AnimationClip.h  AnimationManager.h  Bone.h  CameraClearFlags.h  DirectX12.h  GaussianBlur.h  Mesh.h  MeshManager.h  RenderTarget.h  Skybox.h  SkyboxManager.h  Texture.h  TextureManager.h  Window.h
GearsGraphics/include/Components/: Animator.h  Camera.h  Canvas.h  DirectionalLight.h  Image.h  MeshRenderer.h  SkinnedMeshRenderer.h  SpriteRenderer.h
GearsGraphics/include/DX12/: GraphicsResource.h  RenderTarget.h
GearsGraphics/include/Internal/: CameraBase.h  CameraManager.h  CanvasManager.h  ConstantBuffer.h  DescriptorPool.h  DirectX12.h  GraphicsPipeline.h  ICamera.h  RenderTarget.h  Renderer.h  RenderingManager.h  SkinnedRenderer.h  UIRenderer.h  d3dx12Inc.h
GearsGraphics/src/: AnimationClip.cpp  AnimationManager.cpp  GaussianBlur.cpp  Mesh.cpp  MeshManager.cpp  RenderTarget.cpp  Skybox.cpp  SkyboxManager.cpp  Texture.cpp  TextureManager.cpp  Window.cpp
GearsGraphics/src/Components/: Animator.cpp  Camera.cpp  Canvas.cpp  DirectionalLight.cpp  Image.cpp  MeshRenderer.cpp  SkinnedMeshRenderer.cpp  SpriteRenderer.cpp
GearsGraphics/src/DX12/: GraphicsResource.cpp  RenderTarget.cpp
GearsGraphics/src/Internal/: CameraManager.cpp  CanvasManager.cpp  ConstantBuffer.cpp  DescriptorPool.cpp  DirectX12.cpp  GraphicsPipeline.cpp  RenderTarget.cpp  RenderingManager.cpp
GearsInput/: CMakeLists.txt
GearsInput/include/: InputManager.h  InputState.h  InputSystem.h
GearsInput/include/Internal/: DinputDevice.h  DinputGamePad.h  DirectInput8.h  GamePad.h  GamePadDevice.h  GamePadInput.h  GamePadKeys.h  IGamePad.h  InputData.h  InputState.h  KeyBoardDevice.h  KeyBoardKeys.h  MouseButton.h  MouseDevice.h  XInputState.h  XinputGamePad.h
GearsInput/src/: InputManager.cpp  InputState.cpp  InputSystem.cpp
GearsInput/src/Internal/: DinputDevice.cpp  DinputGamePad.cpp  GamePad.cpp  GamePadDevice.cpp  KeyBoardDevice.cpp  MouseDevice.cpp  XinputGamePad.cpp
GearsMath/: CMakeLists.txt
GearsMath/include/: Color.h  Easing.h  Mathf.h  Matrix3x3.h  Matrix4x4.h  Quaternion.h  Random.h  Vector2.h  Vector3.h  Vector4.h
GearsMath/src/: Color.cpp  Easing.cpp  Mathf.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Random.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
GearsObject/: CMakeLists.txt
GearsObject/include/: EventMsg.h  GameObject.h  GameObjectManager.h  GameObjectPtr.h
GearsObject/include/Internal/: IGameObject.h  IMsgValue.h  MsgValue.h
GearsObject/src/: EventMsg.cpp  GameObject.cpp  GameObjectManager.cpp
GearsPhysics/: CMakeLists.txt
GearsPhysics/include/: Physics.h  RaycastHit.h
GearsPhysics/include/Components/: BoxCollider.h  CapsuleCollider.h  Collider.h  MeshCollider.h  Rigidbody.h  SphereCollider.h
GearsPhysics/include/Internal/: BulletPhysicsManager.h  Geometry.h  ICollider.h  IRigidbody.h  JoltPhysicsManager.h  PhysXManager.h  PhysicsDebugRenderer.h
GearsPhysics/src/: Physics.cpp
GearsScene/: CMakeLists.txt
GearsScene/include/: Scene.h  SceneManager.h
GearsScene/src/: SceneManager.cpp
GearsUtility/: CMakeLists.txt
GearsUtility/include/: BitFlag.h  CSVLoader.h  ComPtr.h  Debugging.h  FileUtility.h  InlineUtility.h  Json.h  Jsonfwd.h  Layer2D.h  Logger.h  MsgBox.h  ObjectPool.h  Singleton.h  SingletonBase.h  StringUtility.h  TimeUtility.h  WeakPtr.h
GearsUtility/src/: CSVLoader.cpp  MsgBox.cpp
ModelConverter/: CMakeLists.txt
ModelConverter/include/: Converter.h  IConverter.h  IModel.h  mcMath.h
ModelConverter/src/: FixCHCP.cpp  main.cpp
(+143 files in other folders)
